--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "description": "Miracle's HTML Formatter for eslint results",
   "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/miracleapps/eslint-formatter-html.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "eslint"
+    "eslint",
+    "eslint-formatter"
   ],
   "author": "Chanakya Lokam",
   "license": "ISC",
